# sdlc-skill-pack

./: .dockerignore  .env.example  .gitignore  APOTHEON_COMPREHENSIVE_BACKLOG.md  APOTHEON_DOCKER_DEPLOYMENT_BACKLOG.md  APOTHEON_DOMAIN_SKILL_ENHANCEMENT_BACKLOG.md  APOTHEON_HARDENING_AND_ERROR_HANDLING_BACKLOG.md  APOTHEON_LOCAL_WORKFLOW_SCHEDULING_BACKLOG.md  APOTHEON_RC1_RELEASE_FINALIZATION_BACKLOG.md  APOTHEON_V9_ENTERPRISE_SKILL_OS_BACKLOG.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE_REVIEW.md  MASTER_BACKLOG.md  MASTER_BACKLOG_ECOMMERCE_EXTENSION.md  MASTER_UX_BACKLOG.md  NEW_APOTHEON_GAP_BACKLOG.md  README.md  RELEASE_NOTES.md  ROADMAP.md  V9_OPEN_WORK_TASKS.md  alembic.ini  cli.py  docker-compose.override.yml  docker-compose.yml  payment_plan.json  pyproject.toml  requirements.txt  telemetry.log.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
alembic/: env.py
app/: config.py  main.py
docs/: index.md  marketplace-ops-inventory-dashboard.md
local_apps/: .env.local-apps.example  README.md  docker-compose.local-apps.yml
profiles/: enterprise.yaml  full-domain-lab.yaml  local-solo.yaml  mvp.yaml  team.yaml
references/: adaptive-intake-policy.md  business-policy-standard.md  conversation-state-machine.md  ecommerce-ontology.md  error-handling-standard.md  local-backup-restore-standard.md  local-output-policy.md  marketplace-certification-v9.md  marketplace-data-policy.md  observability-standard.md  progressive-disclosure-standard.md  rate-limit-and-quota-standard.md  semantic-cache-policy.md  skill-contract-v9.md  skill-evaluation-standard.md  skill-pipeline-standard.md  skill-specification-standard.md  telemetry-standard.md  workflow-plan-standard.md  workflow-scheduling-standard.md
reports/: business_skill_coverage.md  connector_health_report.json  connector_health_report.md  cost_dashboard.json  cost_dashboard.md  dashboard_state.json  ecommerce_operations_report.md  ecommerce_profitability_dashboard.json  hitl_coverage_report.md  local_runtime_readiness.json  local_runtime_readiness.md  marketplace_pricing_report.md  orchestration_map.md  plan-1778548693.json  plan-1778552863.json  release_readiness.json  release_readiness.md  repo_truth_details.json  repo_truth_report.json  repo_truth_report.md  routing_collision_report.md  runtime_diagnostics.json  runtime_diagnostics.md  runtime_economics_dashboard.schema.json  skill_certification_report.md  skill_dependency_graph.json  skill_dependency_graph.mmd  skill_graph.json  skill_graph.md  skill_graph.mmd  skill_inventory.csv  skill_inventory.json  skill_inventory.md  skill_maturity_report.md  skill_pipeline_report.json  skill_pipeline_report.md  test_summary.md  ux_telemetry.json  ux_telemetry.md
schedules/: registry.yaml
schemas/: agent-contribution.schema.json  agent-review.schema.json  ai-telemetry-event.schema.json  artifact-edit-command.schema.json  artifact-patch.schema.json  artifact-relationship.schema.json  assistant-operating-mode.schema.json  assistant-working-state.schema.json  automation-trigger.schema.json  business-policy.schema.json  catalog-install-event.schema.json  catalog-item.schema.json  client.schema.json  command-palette-action.schema.json  comment.schema.json  company-template.schema.json  compiled-skill.schema.json  connector-setup-state.schema.json  context-loading.schema.json  conversation-intent.schema.json  conversation-session.schema.json  conversation-state.schema.json  cost-event.schema.json  daily-plan.schema.json  dashboard-state.schema.json  decision-option.schema.json  decision-record.schema.json  error-envelope.schema.json  evidence-item.schema.json  evidence-pack.schema.json  explanation.schema.json  follow-up.schema.json  generated-report.schema.json  hitl-gate.schema.json  (+56 more)
(+1874 files in other folders)
