[project]
name = "apotheon-sdlc"
version = "0.1.0"
description = "Apotheon AI Company OS — autonomous SDLC and GTM orchestration platform"
requires-python = ">=3.11"
readme = "README.md"

# Core dependencies — required for validation, planning, and local execution
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Durable workflow execution via Temporal
temporal = [
    "temporalio>=1.6.0",
]
# Google connectors (GA4)
google = [
    "google-auth>=2.29.0",
]
# Rich terminal UI (operator console)
ui = [
    "rich>=13.7.0",
]
# FastAPI web application server
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "starlette>=0.37.0",
]
# Observability stack
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
# Full connector platform (all external integrations)
connectors-full = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "google-auth>=2.29.0",
]
# All runtime extras
runtime = [
    "temporalio>=1.6.0",
    "google-auth>=2.29.0",
    "rich>=13.7.0",
]
# Full production install
full = [
    "temporalio>=1.6.0",
    "google-auth>=2.29.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "starlette>=0.37.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]
# Streamlit UIs (chat-ui, dashboard, ecommerce-dashboard)
ui = [
    "streamlit>=1.35.0",
    "rich>=13.7.0",
]
# Development and CI tools
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
apotheon = "cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 60
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]